# pxollyrs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  README.md  config.example.toml
.github/workflows/: release.yml  rust-clippy.yml  rust.yml
conf/: config.toml  settings.toml
config/: chats.json  config.example.toml
src/: api_context.rs  auto_bind.rs  chat_data.rs  error.rs  errors.rs  events.rs  handlers.rs  lib.rs  local_macros.rs  main.rs  migration.rs  settings.rs  tools.rs  utils.rs
src/api/: client.rs  mod.rs  response.rs  responses.rs
src/config/: application.rs  mod.rs  pxolly.rs  vk.rs
src/database/: conn.rs  driver.rs  mod.rs  models.rs  query.rs  session.rs
src/handlers/: chat_members.rs  chat_photo_update.rs  confirmation.rs  delete_for_all.rs  events_get.rs  execute.rs  group_ban.rs  group_unban.rs  invite_user.rs  mod.rs  reset_theme.rs  set_admin.rs  set_theme.rs  sync.rs
src/pxolly/: api.rs  context.rs  dispatcher.rs  errors.rs  execute.rs  mod.rs  traits.rs
src/pxolly/api/: categories.rs  methods.rs  mod.rs  responses.rs
src/pxolly/api/categories/: callback.rs
src/pxolly/api/methods/: edit_settings.rs  get_settings.rs
src/pxolly/dispatch/: compose.rs  context.rs  dispatcher.rs  execute.rs  handler.rs  mod.rs  traits.rs
src/pxolly/types/: categories.rs  errors.rs  events.rs  mod.rs  params.rs  requests.rs  responses.rs
src/pxolly/types/categories/: callback.rs
src/pxolly/types/events/: event.rs  event_type.rs  message.rs  object.rs  user.rs
src/routers/: handler.rs  mod.rs
src/utils/: config.rs  database.rs  mod.rs  models.rs  option.rs
src/vk/: api.rs  client.rs  macros.rs  mod.rs  responses.rs
src/vkontakte/: api.rs  client.rs  errors.rs  mod.rs  responses.rs
src/vkontakte/types/: categories.rs  mod.rs  params.rs  responses.rs
tests/: database.rs
(+30 files in other folders)
