[package]
name = "pxollyrs"
version = "0.3.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.3", features = ["json", "rustls-tls-native-roots"], default-features = false }
config = { version = "0.13.2", features = ["toml"] }
tokio = { version = "1.5.0", features = ["full"] }
serde = { version = "1.0.126", features = ["derive", "rc"] }
serde_json = { version = "1.0.64" }
log = { version = "0.4.14" }
simple_logger = "2.1.0"
thiserror = "1.0.29"
public-ip = "0.2.2"
axum = "0.5.15"
