[package]
name = "pxollyrs"
version = "1.0.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["json", "rustls-tls-native-roots", "multipart"], default-features = false }
config = { version = "0.14.0", features = ["toml"] }
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.204", features = ["derive", "rc"] }
serde_json = { version = "1.0.120" }
log = { version = "0.4.22" }
simple_logger = "5.0.0"
thiserror = "1.0.62"
public-ip = "0.2.2"
axum = "0.7.5"
rmp-serde = "1.3.0"
serde-value = "0.7.0"
anyhow = "1.0.86"
serde_qs = "0.13.0"

[profile.release]
strip = true  
opt-level = "z"
lto = true
codegen-units = 1
